# alokka

./: .editorconfig  .gitignore  LICENSE  README.md  Taskfile.yml  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: ask-a-question.md  bug-report.md  config.yml  discussion.md  feature-request.md
.github/workflows/: automerge.yml  codeql-analysis.yml  test_suite.yml
docs/source/: conf.py  index.rst
tests/: test_alokka.py
