[tool.poetry]
name = "Alokka"
version = "0.1.0"
description = "A super-fast & asynchronous Python library for the Twitter API"
authors = ["Jarmos-san <somraj.mle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
