[tool.poetry]
name = "Alokka"
version = "0.1.0"
description = "A super-fast & asynchronous Python library for the Twitter API"
authors = ["Jarmos-san <somraj.mle@gmail.com>"]

[tool.poetry.urls]
"Tracker" = "https://github.com/Jarmos-san/Alokka/issues"

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv --durations=5 --color=auto --code-highlight=yes"
testpaths = ["tests"]
console_output_style = "count"
required_plugins = "pytest-cov"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
