[tool.poetry]
name = "Alokka"
version = "0.1.0"
description = "A super-fast & asynchronous Python library for the Twitter API"
authors = ["Jarmos-san <somraj.mle@gmail.com>"]

[tool.poetry.urls]
"Tracker" = "https://github.com/Jarmos-san/Alokka/issues"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^4.0.1"
black = "^22.6"
pytest-cov = "^3.0.0"
Sphinx = "^4.5.0"
furo = "^2022.4.7"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv --durations=5 --color=auto --code-highlight=yes"
testpaths = ["tests"]
console_output_style = "count"
required_plugins = "pytest-cov"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
